# emurgocdp

./: .gitignore  CHANGELOG.md  Plutus-Installation.md  README.md  batch68.cabal  cabal.project
scripts/: mint.sh
scripts/work-backup/plutus-scripts/: Crowdfunding.plutus  OnChain.plutus  Parameterized.plutus  ParameterizedSimpler.plutus  contributor.json  parameterized-datum-wrong.json  parameterized-datum.json  pparams.json  tx.draft  tx.signed
scripts/work/plutus-scripts/: MintBurn.plutus  Minting.plutus  Parameterized.plutus  parameterized-datum.json
scripts/work/shell-scripts/: analyzeTx.sh  balance.sh  contractBalance.sh  currentSlot.sh  env  env.sh  generateTxInfo.sh  getTxId.sh  helpers.sh  mintFromScript.sh  payToScript.sh  referenceScript.sh  sendFromWallet.sh  spendFromScript.sh  temp.sh
scripts/work/transactions/: pparams.json  tx.draft  tx.signed  txid  utxo  walletBalances.txt
src/Beneficiary/: EmulatorBeneficiary.hs  OffChain.hs  OnChain.hs
src/Crowdfunding/: Crowdfunding.hs
src/Helper/: Compiler.hs  Compiler1.hs  SlotConversion.hs
src/Minting/: Deploy.hs  MintBurn.hs  OffChainMintBurn.hs  OnChainSimple.hs  TraceMintBurn.hs
src/Minting/Deploy/: MintBurn.plutus
src/Parameterized/: Deploy.hs  EmulatorParameterized.hs  OffChain.hs  OnChain.hs
src/Simple/: EmulatorSimpleType.hs  OffChainType.hs  Simple.hs  SimpleFail.hs  SimpleType.hs
starter/: cabal.project  emurgoProject.cabal
starter/src/Beneficiary/: BeneficiaryEmulator.hs  BeneficiaryOffChain.hs  BeneficiaryOnChain.hs
starter/src/Crowdfunding/: OnChain.hs
starter/src/Guess/: Emulator.hs  OffChain.hs  OnChain.hs
starter/src/MarketNFT/: OnChain.hs
starter/src/Minting/: CompilerFile.hs  CompilerFileSignature.hs  Minting.plutus  NFT.hs  OnChain.hs  OnChainFailed.hs  OnChainSignature.hs
starter/src/Parameterized/: Deploy.hs  ParameterEmulator.hs  ParameterOffChain.hs  ParameterOnChain.hs
starter/src/Utils/: Compiler.hs  CompilerFile.hs  GetSlot.hs
starter/src/Validators/: CustomType.hs  CustomTypeOffChain.hs  SimpleType.hs  SimpleType.plutus  SimpleV.hs  TraceCustomType.hs
test/: Spec.hs
test/Spec/: EmulatorSimpleType.hs
