cabal-version:      3.0
name:               cardano-developer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Moxie

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    
    exposed-modules:
      Simple.Simple,
      Simple.SimpleType,
      Simple.OffChainType,
      Beneficiary.OnChain,
      Beneficiary.OffChain,
      Parameterized.OnChain,
      Parameterized.OffChain,
      Parameterized.Deploy,
      Parameterized.EmulatorParameterized,


-- Plutus dependencies
    build-depends:
      playground-common -any,
      plutus-contract -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-ledger-constraints -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      plutus-script-utils -any,
      cardano-api, 
      cardano-binary,
      data-default,

-- Other dependenices
    build-depends:
      base >= 4.9 && < 5,
      aeson -any,
      bytestring -any,
      containers -any,
      freer-extras -any,
      openapi3,
      text -any,
      lens -any,
      serialise -any,
      base16-bytestring,
    hs-source-dirs: src


test-suite plutus-tests
  import: lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    Spec.EmulatorSimpleType
  build-depends:
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-pab -any,
    plutus-ledger -any,
    cardano-developer -any,
    data-default,
  build-depends:
    base >=4.9 && <5,
    tasty -any,
    tasty-hunit -any,
    text -any,
    tasty-hedgehog >=0.2.0.0,
    freer-extras -any,
